# flow-llm

./: .gitignore  .notes-mais.md  CHANGELOG.md  LICENSE  README.md  architecture.md  build_frontend.sh  docs.md  gemma4.sh  open_claw_local_inference_architecture_plan.md  project.md  setup.sh  start.sh  todo.md
.github/: FUNDING.yml
docs/: architecture.md  changelog.md  github-readiness.md  model-config-plan.md  onboarding.md  project.md  qwen36-tool-calling-setup.md  todo.md  ux-redesign-plan.md
server/: pyproject.toml
server/flow_llm/: __init__.py  anthropic_adapter.py  config.py  database.py  hardware.py  hf_client.py  jit_manager.py  main.py  process_manager.py  request_tracker.py  template_validator.py  updater.py
server/james/: __init__.py  config.py  database.py  hardware.py  hf_client.py  main.py  process_manager.py
server/tests/: conftest.py  test_anthropic_messages.py  test_model_registry_and_settings.py
templates/: qwen36_tools_hermes.jinja
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: Button.tsx  Card.tsx  ConfirmationDialog.tsx  ConnectionBanner.tsx  DownloadProgress.tsx  EmptyState.tsx  IdleWaveform.tsx  InputField.tsx  LoadDialog.tsx  MemoryBar.tsx  ModelConfigDrawer.tsx  RequestBeam.tsx  Sidebar.tsx  StatusBadge.tsx  Toast.tsx  TokenCounter.tsx
web/src/hooks/: useWebSocket.ts
web/src/pages/: Chat.tsx  Logs.tsx  Models.tsx  Monitor.tsx  Running.tsx  Settings.tsx  Telemetry.tsx
web/src/store/: monitorStore.ts  (+1 more)
(+1 files in other folders)
