[project]
name = "flow-llm"
version = "0.1.0"
description = "Flow LLM — macOS LLM orchestration for OpenClaw on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "huggingface-hub>=0.29.0",
    "jinja2>=3.1.0",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
flow = "flow_llm.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
